src/test/ui/argument-suggestions/mixed_cases.stderr
error[E0061]: this function takes 2 arguments but 3 arguments were supplied
  --> $DIR/mixed_cases.rs:10:3
   |
LL |   two_args(1, "", X {});
   |   ^^^^^^^^ -  --  ---- supplied 3 arguments
   |   |
   |   expected 2 arguments
   |
note: function defined here
  --> $DIR/mixed_cases.rs:5:4
   |
LL | fn two_args(_a: i32, _b: f32) {}
   |    ^^^^^^^^ -------  -------

error[E0061]: this function takes 3 arguments but 4 arguments were supplied
  --> $DIR/mixed_cases.rs:11:3
   |
LL |   three_args(1, "", X {}, "");
   |   ^^^^^^^^^^ -  --  ----  -- supplied 4 arguments
   |   |
   |   expected 3 arguments
   |
note: function defined here
  --> $DIR/mixed_cases.rs:6:4
   |
LL | fn three_args(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------

error[E0061]: this function takes 3 arguments but 2 arguments were supplied
  --> $DIR/mixed_cases.rs:14:3
   |
LL |   three_args(1, X {});
   |   ^^^^^^^^^^ -  ---- supplied 2 arguments
   |   |
   |   expected 3 arguments
   |
note: function defined here
  --> $DIR/mixed_cases.rs:6:4
   |
LL | fn three_args(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------

error[E0308]: mismatched types
  --> $DIR/mixed_cases.rs:17:17
   |
LL |   three_args(1, "", X {});
   |                 ^^ expected `f32`, found `&str`

error[E0308]: mismatched types
  --> $DIR/mixed_cases.rs:17:21
   |
LL |   three_args(1, "", X {});
   |                     ^^^^ expected `&str`, found struct `X`

error[E0308]: mismatched types
  --> $DIR/mixed_cases.rs:22:14
   |
LL |   three_args("", X {}, 1);
   |              ^^ expected `i32`, found `&str`

error[E0308]: mismatched types
  --> $DIR/mixed_cases.rs:22:18
   |
LL |   three_args("", X {}, 1);
   |                  ^^^^ expected `f32`, found struct `X`

error[E0308]: mismatched types
  --> $DIR/mixed_cases.rs:22:24
   |
LL |   three_args("", X {}, 1);
   |                        ^ expected `&str`, found integer

error[E0061]: this function takes 3 arguments but 2 arguments were supplied
  --> $DIR/mixed_cases.rs:28:3
   |
LL |   three_args("", 1);
   |   ^^^^^^^^^^ --  - supplied 2 arguments
   |   |
   |   expected 3 arguments
   |
note: function defined here
  --> $DIR/mixed_cases.rs:6:4
   |
LL | fn three_args(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0061, E0308.
For more information about an error, try `rustc --explain E0061`.
